--- a/src/pages/style.css
+++ b/src/pages/style.css
@@ -14,7 +14,7 @@
 
 body {
 	height: 100vh;
-	min-height: 55.546875rem;
+	/* min-height: 55.546875rem; */
 	width: min(67.5rem, 100vw - 2 * var(--app-padding));
 	min-width: 67.5rem;
 	background-color: var(--bg-primary);
@@ -84,7 +84,7 @@ main {
 	flex-direction: column;
 	gap: 1rem;
 	/* Important! Allows flex items to shrink (for scroll) */
-	min-height: 0;
+	min-height: 15rem;
 }
 
 #upcoming-deadlines ul {
